# edge-treesitter

./: CMakeLists.txt  Cargo.toml  Package.swift  README.md  binding.gyp  deno.json  example.edge  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  lint.yml
bindings/c/: tree-sitter-edge.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.cjs  index.cjs
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_edge/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEdgeTests/: TreeSitterEdgeTests.swift
ftdetect/: edge.lua
ftplugin/: edge.lua
main/: grammar.ts
plugin/: edge.lua
queries/edge/: folds.scm  highlights.scm  indents.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  components.txt  conditionals.txt  inline_directives.txt  keyword.txt  loops.txt  mustache.txt  slots.txt  stacks.txt
