[package]
name = "tree-sitter-edge"
description = "Edge.js template grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "edge"]
categories = ["parsing", "text-editors"]
edition = "2021"
license = "MIT"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "LICENSE",
  "bindings/rust",
  "grammar.js",
  "queries",
  "src",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.25"
